--- a/index.html
+++ b/index.html
@@ -8,63 +8,62 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </head>
 <header>Star Wars RPG Sith</header>
 
-<body background="./assets/images/background.jpg">
+<body>
     <row id="characterrow">
         <div class="card-deck">
             <div class="col-sm-2" id="char1">
                 <div class="card border-danger text-primary bg-danger" style="width: 200px">
-                    <div class="card-header" style="text-align: center">
+                    <div class="card-header" id="char1_name">
                         Kylo Ren
                     </div>
                     <img src="./assets/images/character1.jpg" width="200px" height="150px">
-                    <div class="card-footer" style="text-align: center">
+                    <div class="card-footer" id="char1_hp">
                         120
                     </div>
                 </div>
             </div>
             <div class="col-sm-2" id="char2">
                 <div class="card border-danger text-primary bg-danger" style="width: 200px">
-                    <div class="card-header" style="text-align: center">
+                    <div class="card-header" id="char2_name">
                         Jango Fett
                     </div>
                     <img src="./assets/images/character2.jpg" width="200px" height="150px">
-                    <div class="card-footer" style="text-align: center">
-                        120
+                    <div class="card-footer" id="char2_hp">
+                        140
                     </div>
                 </div>
             </div>
             <div class="col-sm-2" id="char3">
                 <div class="card border-danger text-primary bg-danger" style="width: 200px">
-                    <div class="card-header" style="text-align: center">
-                        Kylo Ren
+                    <div class="card-header" id="char3_name">
+                        Anakin Skywalker
                     </div>
                     <img src="./assets/images/character3.jpg" width="200px" height="150px">
-                    <div class="card-footer" style="text-align: center">
-                        120
+                    <div class="card-footer" id="char3_hp">
+                        160
                     </div>
                 </div>
             </div>
             <div class="col-sm-2" id="char4">
                 <div class="card border-danger text-primary bg-danger" style="width: 200px">
-                    <div class="card-header" style="text-align: center">
-                        Kylo Ren
+                    <div class="card-header" id="char4_name">
+                        Qui-gon-jin
                     </div>
                     <img src="./assets/images/character4.jpg" width="200px" height="150px">
-                    <div class="card-footer" style="text-align: center">
-                        120
+                    <div class="card-footer" id="char4_hp">
+                        180
                     </div>
                 </div>
             </div>
@@ -81,14 +80,16 @@
     <row id="fightsection">
         <h1>Fight Section</h1>
         <button id="attack">
+            <audio id="winnersound" src="./assets/music/star-wars-cantina-song.mp3"></audio>
             Attack
         </button>
     </row>
+    <div class="message">
+        <strong> </strong>
+    </div>
     <row id="defender">
         <h1>Defender</h1>
     </row>
-
-
     <script src="assets/javascript/game.js"></script>
 </body>
 
